test/type_inference/negative/type_args3.impala
trait T {}

fn f[A: T](a: A) -> A { a }

fn main() -> () {
    f(5);
}
